# pab

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  SESSION_JSON_SCHEMA.md  meson.build  pabd  pabs
.claude/: settings.local.json
assessment/: CLAUDE.md  pyproject.toml
assessment/docs/: architecture.md  customising-the-assessment-form.md  field-key-reference.md  project-context-paste.md
assessment/pab_assessment/: assessment_view.py  form_schema.py  grid_overview.py  logic.py  main.py  mapping.py  report_modal.py  search.py  storage.py  tui.py  watcher.py  widgets.py
assessment/pab_assessment/objective/: kb_db_screen.py  kb_loader.py  kb_panel.py  objective_view.py
assessment/regions/: cervical_physical_examination.md
bodychart/: CLAUDE.md  meson.build
bodychart/data/: com.pab.bodychart.desktop
bodychart/src/: canvas.c  canvas.h  input.c  integration.c  integration.h  main.c  obj_chart.c  obj_chart.h  overlay_svg.c  persistence.c  report.c  session.c  session.h  settings.c  stroke.c  stroke.h  svg_regions.c  svg_views.c  window.c
docs/: REGION_PLUGIN_ARCHITECTURE.md  dev-setup.md  pab-migration-plan.md  todolist.txt
physio-assessment/docs/: customising-the-assessment-form.md  project-context-paste.md
physio-assessment/physio_assessment/: assessment_view.py  main.py  search.py  storage.py  tui.py  watcher.py  yaml_subsection.py
physio-bodychart/: meson.build
physio-bodychart/src/: canvas.c  canvas.h  persistence.c  stroke.h  window.c
src/: canvas.h  persistence.c  persistence.h  session.c  session.h  window.c
tools/: placepdf
(+44 files in other folders)
